<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bridge_mappings</name>
  <version>0.0.0</version>
  <description>The bridge_mappings package</description>

  <maintainer email="matheus.soares@jacto.com.br">Matheus Sousa Soares</maintainer>

  <license>Jacto Copyright</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>

</package>